src/styles/root-layout.module.scss
@use "../styles/theme.module.scss" as Theme;
@use "../styles/mixins.scss" as Mixins;
// logo {
a.home-button {
  $max-scale: 1.07;
  height: calc(100% - ($max-scale * 100% - 100%));
  width: fit-content;
  margin: 1rem auto;
  display: block;
  aspect-ratio: 1/1;
  border: 4px solid Theme.$primary;
  border-radius: 100%;
  background-color: white;
  transition: all #{Theme.$transitionShort}s;
  &:hover {
    scale: $max-scale;
  }
  &:active {
    box-shadow: none;
    scale: calc($max-scale - 0.1);
  }
  @include Mixins.mediaQuery(Theme.$SmPhoneViewport) {
    .logo{
      width: 100%;
      height: auto;
    }
  }
}
// }

// All layouts
@mixin all-layouts() {
  display: flex;
  flex-basis: 0;
  .right-flex,
  .left-flex {
    flex: 1 1 0;
  }
  .content-box {
    flex: 0 1 Theme.$tabletViewport;
    display: flex;
    flex-direction: column;
    align-items: center;
    // Do not Add:
    // padding;
    // margin;
  }
  @include Mixins.mediaQuery(Theme.$tabletViewport) {
    .content-box {
      flex: 0 1 Theme.$LgPhoneViewport;
    }
  }

  @include Mixins.mediaQuery(Theme.$LgPhoneViewport) {
    .content-box {
      flex: 0 1 Theme.$SmPhoneViewport;
    }
  }

  @include Mixins.mediaQuery(Theme.$SmPhoneViewport) {
    display: block;
    width: fit-content;
  }
  @include Mixins.mediaQuery(Theme.$microViewport) {
    @include Mixins.setImageValues() {
      width: 100%;
      height: auto;
    }
  }
}

$spaceBetweenLayouts: 100px;

.white-layout {
  @include all-layouts;
  flex: 1 1;
  padding: Theme.$spaceBetweenElements 0 $spaceBetweenLayouts 0;
  background-color: white;
}

.wood-layout {
  @include all-layouts;
  flex: 2 2;
  padding: $spaceBetweenLayouts 0;
  background-color: Theme.$darkPrimary;
  background-position: center;
  background-size: cover;
  @include Mixins.setTextValues() {
    color: Theme.$lightPrimary;
  }
}

.tan-layout {
  @include all-layouts;
  flex: 1 1;
  padding: $spaceBetweenLayouts 0;
  background-color: Theme.$lightPrimary;
}

